# aircraft-datcom

./: .gitignore  .project  CMakeLists.txt  COPYING  README
data/: .gitignore  sprob.in  sprob.out  weird_table.out
scripts/: datcom2xml.py
src/: .agenr.f.swp  CMakeLists.txt  __README.txt  agenr.f  airfol.f  aldlpr.f  ali.f  angdet.f  angles.f  arccos.f  arclss.f  arcsin.f  area1.f  area2.f  asmint.f  auxout.f  axprnt.f  bdarea.f  blockd.f  bodopt.f  bodowg.f  bodyjm.f  bodyrt.f  cacalc.f  calca.f  calca0.f  ccard.f  cdrag.f  cdwbt.f  check.f  clbclc.f  cleara.f  clmch0.f  clmxb1.f  clmxbs.f  clrder.f  clwbt.f  cmalph.f  cmalpo.f  cnca.f  (+315 more)
