add_executable(aircraft_datcom
    agenr.f
    airfol.f
    aldlpr.f
    ali.f
    angdet.f
    angles.f
    arccos.f
    arclss.f
    arcsin.f
    area1.f
    area2.f
    asmint.f
    atmos.f
    auxout.f
    axprnt.f
    bdarea.f
    blockd.f
    bodopt.f
    bodowg.f
    bodyjm.f
    bodyrt.f
    cacalc.f
    calca0.f
    calca.f
    ccard.f
    cdrag.f
    cdwbt.f
    check.f
    clbclc.f
    cleara.f
    clmch0.f
    clmxb1.f
    clmxbs.f
    clrder.f
    clwbt.f
    cmalph.f
    cmalpo.f
    cnca.f
    conerr.f
    conv.f
    coord1.f
    coord4.f
    coord5.f
    coord6.f
    cord4m.f
    cord5m.f
    cordsp.f
    cslope.f
    ctabs.f
    datcom.f
    decfig.f
    decode.f
    dely.f
    det4.f
    dflcon.f
    dmpary.f
    dnpawb.f
    dnpwbt.f
    dpresr.f
    dragfp.f
    dump2.f
    dumprt.f
    dwash.f
    dynbod.f
    dyprls.f
    eqspc1.f
    eqspce.f
    exit.f
    expdat.f
    exsubt.f
    extrst.f
    fg6115.f
    fig26.f
    fig53a.f
    fig60b.f
    fig68.f
    findch.f
    findvn.f
    flapcm.f
    fltcl.f
    forint.f
    forlog.f
    forrea.f
    fwdxac.f
    gdelta.f
    getmax.f
    glook.f
    grdeff.f
    hbtran.f
    headr.f
    hinge.f
    hortyw.f
    hypbod.f
    hypflp.f
    hyprop.f
    ideal.f
    inftgm.f
    initz1.f
    initz2.f
    initze.f
    iniz.f
    inputb.f
    inputc.f
    input.f
    intep3.f
    inter3.f
    interm.f
    interx.f
    intkbw.f
    jetfp.f
    jetpwe.f
    latflp.f
    liftcf.f
    liftfp.f
    loarwb.f
    lvalue.f
    m01o01.f
    m02o02.f
    m03o03.f
    m04o04.f
    m05o05.f
    m06o06.f
    m07o07.f
    m08o10.f
    m09o11.f
    m10o12.f
    m11o13.f
    m12o14.f
    m13o15.f
    m14o16.f
    m15o17.f
    m16o20.f
    m17o21.f
    m18o22.f
    m19o23.f
    m20o24.f
    m21o25.f
    m22o26.f
    m23o27.f
    m24o30.f
    m25o31.f
    m26o32.f
    m27o33.f
    m28o34.f
    m29o35.f
    m30o36.f
    m31o37.f
    m32o40.f
    m33o41.f
    m34o42.f
    m35o43.f
    m36o44.f
    m37o45.f
    m38o46.f
    m39o47.f
    m40o50.f
    m41o51.f
    m42o52.f
    m43o53.f
    m44o54.f
    m45o55.f
    m46o56.f
    m47o57.f
    m48o60.f
    m49o61.f
    m50o62.f
    m51o63.f
    m52o64.f
    m53o65.f
    m54o66.f
    m55o67.f
    m56o70.f
    m57o71.f
    mach2.f
    main00.f
    main01.f
    main02.f
    main03.f
    main04.f
    main05.f
    main06.f
    main07.f
    majerr.f
    masrat.f
    maxcl.f
    messge.f
    namer.f
    namew.f
    nmlist.f
    outpt2.f
    outpt4.f
    output.f
    outtrj.f
    prcsid.f
    prnsec.f
    prpwef.f
    ptcp.f
    ptint1.f
    ptint2.f
    quad.f
    quadin.f
    readcd.f
    readxm.f
    reptct.f
    rvalue.f
    sddvc.f
    sdwa.f
    sdwash.f
    sdwb.f
    sdwc.f
    sdwd.f
    sdwe.f
    seci.f
    seclev.f
    seco.f
    setup1.f
    setup2.f
    simul2.f
    simul4.f
    skipbl.f
    sleq.f
    slope.f
    sorter.f
    spryaw.f
    sshing.f
    sssym.f
    storxm.f
    subhyw.f
    subint.f
    sublat.f
    sublog.f
    subpah.f
    subpaw.f
    subrea.f
    subryw.f
    subwbt.f
    supcld.f
    supcm0.f
    supcmd.f
    supcmq.f
    supdrg.f
    suphb.f
    suphld.f
    suphmd.f
    suphmq.f
    suphyw.f
    suplaf.f
    suplah.f
    suplat.f
    suplav.f
    suplng.f
    supltg.f
    suppah.f
    suppaw.f
    supryw.f
    supwb.f
    supwbt.f
    switch.f
    swrite.f
    syndim.f
    sypbod.f
    tablec.f
    tables.f
    tbfunx.f
    tbsub.f
    tbsup.f
    tbtrn.f
    testor.f
    theory.f
    tlin1x.f
    tlin3x.f
    tlin4x.f
    tlinex.f
    tlinvs.f
    tlip1x.f
    tlip2x.f
    tlip3x.f
    todec.f
    toint.f
    tolog.f
    tracm0.f
    tranac.f
    trancd.f
    trancm.f
    tranf.f
    tranhb.f
    tranjt.f
    tranwb.f
    tranwg.f
    trapz.f
    trawbt.f
    trhtcm.f
    trimr2.f
    trimrt.f
    trnht.f
    trnyrl.f
    trsoni.f
    trsonj.f
    vfcdo.f
    vfdrag.f
    vflift.f
    vname.f
    vrtcdo.f
    vtarea.f
    vtdrag.f
    vtlift.f
    wbaero.f
    wbcd.f
    wbcdl.f
    wbclb.f
    wbcm0.f
    wbcm1.f
    wbcm.f
    wbdrag.f
    wblift.f
    wbtail.f
    wbtcdo.f
    wbtra.f
    wbtran.f
    wgeotl.f
    wingcl.f
    wingyw.f
    wplot.f
    writxm.f
    wtgeom.f
    wtlift.f
    xnam10.f
    xnam11.f
    xnam12.f
    xnam13.f
    xnam14.f
    xnam15.f
    xnam16.f
    xnam17.f
    xnam18.f
    xnam19.f
    xnam1.f
    xnam20.f
    xnam21.f
    xnam22.f
    xnam23.f
    xnam2.f
    xnam3.f
    xnam4.f
    xnam5.f
    xnam6.f
    xnam7.f
    xnam8.f
    xnam9.f
    xpernm.f
    xycord.f
    yup.f
    zerang.f
	)

add_executable(aircraft_datcom_plot
    dplot.f
    )
